Inicio das categorias dos adicionais
